spl/tests/compile_fail/close_ambiguous_args.stderr
error[E0277]: the trait bound `quasar_spl::accounts::token_close::Behavior: AccountBehavior<quasar_lang::accounts::Account<Data>>` is not satisfied
  --> tests/compile_fail/close_ambiguous_args.rs:12:10
   |
12 | #[derive(Accounts)]
   |          ^^^^^^^^ the trait `AccountBehavior<quasar_lang::accounts::Account<Data>>` is not implemented for `quasar_spl::accounts::token_close::Behavior`
   |
   = help: the following other types implement trait `AccountBehavior<A>`:
             `quasar_spl::accounts::token_close::Behavior` implements `AccountBehavior<InterfaceAccount<quasar_spl::Token>>`
             `quasar_spl::accounts::token_close::Behavior` implements `AccountBehavior<quasar_lang::accounts::Account<Token2022>>`
             `quasar_spl::accounts::token_close::Behavior` implements `AccountBehavior<quasar_lang::accounts::Account<quasar_spl::Token>>`
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)
